# taichi_course01_final

./: .flake8  README.md  pyproject.toml
taichi_course01_final/: BVH.py  Camera.py  Main.py  Ray.py  Scene.py  Types.py  Utils.py
taichi_course01_final/HittableObject/: Ellipse.py  Plane.py  Sphere.py
taichi_course01_final/Renderer/: ColorOnlyRenderer.py  PathTracerRenderer.py  __init__.py
taichi_course01_final/Spectrum/: CoefficientSpectrum.py  Data.py  SampleSepctrum.py
